--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: grey;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.quote-text-container {
+  border: 1px solid red;
+  top: 50%;
+  margin-top: 50%;
+  padding: 0 10%;
+  text-align: center;
+  /* display: block; */
+  background-color: rgb(119, 241, 149);
+}
+
+.quote-text-container p {
+  color: rgb(54, 134, 165);
+  font-size: 18px;
+}
+
+.quote-text {
+  margin: 2% 10%;
+  text-align: justify;
+  /* color: rgb(81, 92, 196); */
+}
+
+.quote-author {
+  border: 1px solid green;
+  padding-left: 80%;
+  /* color: rgb(81, 92, 196); */
+}
+
+.next-button {
+  border: 1px solid blue;
+  margin: 3% 20%;
+  padding: 5%;
+}
+
+.next-button [input] {
+  height: 25%;
+  width: 30%;
 }
